# desdemona

./: Cargo.toml  README.md  positions.html
src/: board.rs  data.rs  disc.rs  game.rs  lib.rs  position.rs
src/solvers/: maximize.rs  minimize.rs  mod.rs  monte.rs  random.rs  simple.rs
src/strategies/: constrain.rs  corners.rs  maximize.rs  minimize.rs  mod.rs  monte.rs  random.rs  simple.rs
