[package]
name = "desdemona"
version = "0.2.1"
edition = "2018"
description = "Command line Othello and simulation framework"
authors = ["Peat Bakke <peat@peat.org>"]
license = "GPL-3.0"
default-run = "desdemona"
repository = "https://github.com/peat/desdemona"
categories = ["command-line-utilities", "games", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# handy for `cargo flamegraph`
[profile.release]
debug = true

[dependencies]
rand = "0" # for bin/stress and strategy/random
text_io = "0" # for bin/desdemona
clap = "2" # for bin/desdemona
rayon = "1" # for strategy/monte